# meshrush

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  _connector_probe.txt  pyproject.toml
.github/workflows/: ci.yml  crystallization-fixtures.yml
adr/: 0001-repo-charter.md  0002-source-of-truth.md  0003-ecosystem-boundary.md  0004-publication-contract.md
docs/: README.md
docs/integrations/: GAIA_OFIF_MESH_GRAPH_OPS.md
examples/: basic_runtime_flow.py  checkpoint_resume_flow.py
experiments/: README.md
experiments/random-walk-baselines/: README.md
fixtures/graph-views/: gaia-map-workbench-osm-crystallization.sample.v1.json  navigation-corridor-lidar-crystallization.sample.v1.json  p0-verification.trigger.json  soil-intelligence-crystallization.sample.v1.json
references/: README.md
schemas/evidence/: network-intelligence-event.schema.json
specs/: 00-meshrush-charter.md  01-foundation.md  02-core-runtime.md  03-omni-network-diffusion.md  04-crystal-stopping-metrics.md  05-evidence-network-intelligence.md  06-adapters-network-ops.md  10-omni-diffusion.md  20-crystal-compile.md  35-sociosphere-integration.md  40-agentplane-integration.md  50-alexandrian-academy-integration.md  70-execution-evidence-alignment.md
src/meshrush/: api.py  cli.py
src/meshrush/core/: contracts.py  in_memory_runtime.py  runtime.py
src/meshrush/crystal/: basic_compiler.py  compile.py  (+1 more)
tests/: README.md  test_artifact_serialization.py  test_basic_runtime_flow.py  test_cli_smoke.py  test_imports.py  test_public_api.py
tools/: validate_crystallization_fixtures.py
(+6 files in other folders)
